updated CNWW Website Logo
updated CNWW Website Logo

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -3101,7 +3101,7 @@
 					<key>page36 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T16:51:40Z</date>
+						<date>2018-05-04T17:02:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3115,16 +3115,6 @@
 								</data>
 								<key>Size</key>
 								<integer>269913</integer>
-							</dict>
-							<key>files/small_109946.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								WH6KVJtESc55
-								UPLBdfd4OA==
-								</data>
-								<key>Size</key>
-								<integer>53326</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
@@ -3216,6 +3206,26 @@
 								<key>Size</key>
 								<integer>125068</integer>
 							</dict>
+							<key>files/stacks-image-f38d32b-800x688.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								WmwBlwPRcj//
+								XlkCNgijdQ==
+								</data>
+								<key>Size</key>
+								<integer>168015</integer>
+							</dict>
+							<key>files/stacks-image-f38d32b-800x688@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								KtiPnHEcaHvC
+								D7lPKXVo6Q==
+								</data>
+								<key>Size</key>
+								<integer>340282</integer>
+							</dict>
 							<key>files/stacks-image-faf7292-250x374.png</key>
 							<dict>
 								<key>Digest</key>
@@ -3230,11 +3240,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5k21z/VlzBQw
-								mvli1Xg+AA==
+								Uk2sfBQvl2V8
+								Nn27RllAUg==
 								</data>
 								<key>Size</key>
-								<integer>153089</integer>
+								<integer>151440</integer>
 							</dict>
 							<key>files/stacks_page_page36.js</key>
 							<dict>
@@ -3250,11 +3260,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Bw50jdThsJme
-								4PIpW6RKzg==
+								z8oJEGvuErDG
+								QUXKqRHDew==
 								</data>
 								<key>Size</key>
-								<integer>61497</integer>
+								<integer>60380</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4887,7 +4897,7 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T16:51:40Z</date>
+						<date>2018-05-04T17:03:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4901,16 +4911,6 @@
 								</data>
 								<key>Size</key>
 								<integer>269913</integer>
-							</dict>
-							<key>files/small_110077.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								WH6KVJtESc55
-								UPLBdfd4OA==
-								</data>
-								<key>Size</key>
-								<integer>53326</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
@@ -5122,6 +5122,26 @@
 								<key>Size</key>
 								<integer>7818</integer>
 							</dict>
+							<key>files/stacks-image-f38d32b-800x688.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								WmwBlwPRcj//
+								XlkCNgijdQ==
+								</data>
+								<key>Size</key>
+								<integer>168015</integer>
+							</dict>
+							<key>files/stacks-image-f38d32b-800x688@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								KtiPnHEcaHvC
+								D7lPKXVo6Q==
+								</data>
+								<key>Size</key>
+								<integer>340282</integer>
+							</dict>
 							<key>files/stacks-image-faf7292-250x374.png</key>
 							<dict>
 								<key>Digest</key>
@@ -5146,11 +5166,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								uQRIxtL0FR0T
-								2MXIMn3Syg==
+								HMDlV1FXVB3V
+								SuGMYRNzKw==
 								</data>
 								<key>Size</key>
-								<integer>163801</integer>
+								<integer>162172</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -5166,11 +5186,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ch6LpZzRUzOP
-								18YJIM35jA==
+								fhd1Ls5jzA7j
+								PMgT1ujC1Q==
 								</data>
 								<key>Size</key>
-								<integer>83858</integer>
+								<integer>82718</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5989,7 +6009,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T16:51:40Z</date>
+						<date>2018-05-04T17:03:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6038,11 +6058,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								kEUw5h3X9TQH
-								g4MdI1XUtQ==
+								AVgEv12SmfR3
+								1j2wOCcdAw==
 								</data>
 								<key>Size</key>
-								<integer>3254</integer>
+								<integer>3318</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6055,7 +6075,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T16:51:40Z</date>
+						<date>2018-05-04T17:03:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7094,11 +7114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								j1SCcxR2XOxu
-								a43ArJjjwg==
+								iJsGfjlNlHFn
+								0Jeao3FahA==
 								</data>
 								<key>Size</key>
-								<integer>1971</integer>
+								<integer>2067</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
