--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T16:51:40Z</date>
+						<date>2018-05-04T17:03:59Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -47,16 +47,6 @@
 								</data>
 								<key>Size</key>
 								<integer>269913</integer>
-							</dict>
-							<key>files/small_110077.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								WH6KVJtESc55
-								UPLBdfd4OA==
-								</data>
-								<key>Size</key>
-								<integer>53326</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
@@ -268,6 +258,26 @@
 								<key>Size</key>
 								<integer>7818</integer>
 							</dict>
+							<key>files/stacks-image-f38d32b-800x688.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								WmwBlwPRcj//
+								XlkCNgijdQ==
+								</data>
+								<key>Size</key>
+								<integer>168015</integer>
+							</dict>
+							<key>files/stacks-image-f38d32b-800x688@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								KtiPnHEcaHvC
+								D7lPKXVo6Q==
+								</data>
+								<key>Size</key>
+								<integer>340282</integer>
+							</dict>
 							<key>files/stacks-image-faf7292-250x374.png</key>
 							<dict>
 								<key>Digest</key>
@@ -292,11 +302,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								uQRIxtL0FR0T
-								2MXIMn3Syg==
+								HMDlV1FXVB3V
+								SuGMYRNzKw==
 								</data>
 								<key>Size</key>
-								<integer>163801</integer>
+								<integer>162172</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -312,11 +322,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ch6LpZzRUzOP
-								18YJIM35jA==
+								fhd1Ls5jzA7j
+								PMgT1ujC1Q==
 								</data>
 								<key>Size</key>
-								<integer>83858</integer>
+								<integer>82718</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
