updated broken link
on research page Laurent's group

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -1675,7 +1675,7 @@
 					<key>page22 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-07T19:48:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -1774,11 +1774,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								xBZLoERFfpn8
-								6qKk4laL5A==
+								GkBS9OTYvWy7
+								rhvvEozLqw==
 								</data>
 								<key>Size</key>
-								<integer>49782</integer>
+								<integer>49784</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -1791,7 +1791,7 @@
 					<key>page23 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-07T19:48:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2050,11 +2050,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5wTnCp4K7IRH
-								GD45iPb55Q==
+								ATfwe4INdTon
+								fS+DCSZt1A==
 								</data>
 								<key>Size</key>
-								<integer>62774</integer>
+								<integer>62754</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6009,7 +6009,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T17:03:59Z</date>
+						<date>2018-05-07T19:48:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6058,11 +6058,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AVgEv12SmfR3
-								1j2wOCcdAw==
+								kEUw5h3X9TQH
+								g4MdI1XUtQ==
 								</data>
 								<key>Size</key>
-								<integer>3318</integer>
+								<integer>3254</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6075,7 +6075,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T17:03:59Z</date>
+						<date>2018-05-07T19:48:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7114,11 +7114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								iJsGfjlNlHFn
-								0Jeao3FahA==
+								2VX3aLds6+70
+								5ImjcD2dTw==
 								</data>
 								<key>Size</key>
-								<integer>2067</integer>
+								<integer>1979</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
