--- a/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/1-Research-groups/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/1-Research-groups/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-07T19:48:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -132,11 +132,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								xBZLoERFfpn8
-								6qKk4laL5A==
+								GkBS9OTYvWy7
+								rhvvEozLqw==
 								</data>
 								<key>Size</key>
-								<integer>49782</integer>
+								<integer>49784</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
