Added CNWW Faculty and Application Button
Added CNWW Faculty and Application Button

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -3101,7 +3101,7 @@
 					<key>page36 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T17:02:29Z</date>
+						<date>2018-05-13T15:34:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3156,6 +3156,16 @@
 								<key>Size</key>
 								<integer>337058</integer>
 							</dict>
+							<key>files/stacks-image-24a754b-250x254.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								vVeZyTy9ktpw
+								4c/asRc/Xg==
+								</data>
+								<key>Size</key>
+								<integer>87004</integer>
+							</dict>
 							<key>files/stacks-image-48ee80b-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -3196,6 +3206,46 @@
 								<key>Size</key>
 								<integer>12547</integer>
 							</dict>
+							<key>files/stacks-image-bbb78b8-250x256.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								JGmq7bn3sZKr
+								l/PS9TxkQw==
+								</data>
+								<key>Size</key>
+								<integer>87862</integer>
+							</dict>
+							<key>files/stacks-image-bbb78b8-250x256@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								0bFXvBesPqoA
+								8kzqWu367w==
+								</data>
+								<key>Size</key>
+								<integer>319108</integer>
+							</dict>
+							<key>files/stacks-image-bcdb310-250x256.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								JQq/tMG5yWnX
+								mrXC2R4Oig==
+								</data>
+								<key>Size</key>
+								<integer>101345</integer>
+							</dict>
+							<key>files/stacks-image-bcdb310-250x256@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								BBFEAKWPfxhN
+								YCQVK2+Czg==
+								</data>
+								<key>Size</key>
+								<integer>353790</integer>
+							</dict>
 							<key>files/stacks-image-d36e992-250x322.png</key>
 							<dict>
 								<key>Digest</key>
@@ -3205,6 +3255,36 @@
 								</data>
 								<key>Size</key>
 								<integer>125068</integer>
+							</dict>
+							<key>files/stacks-image-eeb0773-250x256.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								GLa1SXJ3/KWi
+								242Hx1R27g==
+								</data>
+								<key>Size</key>
+								<integer>97076</integer>
+							</dict>
+							<key>files/stacks-image-eeb0773-250x256@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								E6u3Hrgo76W+
+								JMp5vekY4g==
+								</data>
+								<key>Size</key>
+								<integer>319747</integer>
+							</dict>
+							<key>files/stacks-image-f3385bb-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								d/12RsCKoVv4
+								r9+0ESaqAg==
+								</data>
+								<key>Size</key>
+								<integer>78971</integer>
 							</dict>
 							<key>files/stacks-image-f38d32b-800x688.png</key>
 							<dict>
@@ -3240,11 +3320,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Uk2sfBQvl2V8
-								Nn27RllAUg==
+								rxwf4nIxJ/Fd
+								2l7sRQKtGA==
 								</data>
 								<key>Size</key>
-								<integer>151440</integer>
+								<integer>164222</integer>
 							</dict>
 							<key>files/stacks_page_page36.js</key>
 							<dict>
@@ -3260,11 +3340,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								z8oJEGvuErDG
-								QUXKqRHDew==
+								1O02I/N++I93
+								RG3yMyrVbA==
 								</data>
 								<key>Size</key>
-								<integer>60380</integer>
+								<integer>69248</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4897,7 +4977,7 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T17:03:59Z</date>
+						<date>2018-05-13T15:34:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4931,6 +5011,46 @@
 								</data>
 								<key>Size</key>
 								<integer>68548</integer>
+							</dict>
+							<key>files/stacks-image-10532b8-250x260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								U8fXe2mIAwWX
+								hw+GczBpSg==
+								</data>
+								<key>Size</key>
+								<integer>97116</integer>
+							</dict>
+							<key>files/stacks-image-10532b8-250x260@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								8WCcaPD7Laqf
+								FSKjvdKBnQ==
+								</data>
+								<key>Size</key>
+								<integer>319859</integer>
+							</dict>
+							<key>files/stacks-image-17fd2ba-250x260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								N0khg3CNZLPo
+								Gy4lYWwyhQ==
+								</data>
+								<key>Size</key>
+								<integer>87965</integer>
+							</dict>
+							<key>files/stacks-image-17fd2ba-250x260@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Os8gTdkxTsH7
+								wsVCDx+aDw==
+								</data>
+								<key>Size</key>
+								<integer>319397</integer>
 							</dict>
 							<key>files/stacks-image-1aebfb5-250x250.png</key>
 							<dict>
@@ -4971,6 +5091,16 @@
 								</data>
 								<key>Size</key>
 								<integer>222004</integer>
+							</dict>
+							<key>files/stacks-image-24a754b-250x254.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								vVeZyTy9ktpw
+								4c/asRc/Xg==
+								</data>
+								<key>Size</key>
+								<integer>87004</integer>
 							</dict>
 							<key>files/stacks-image-2d02c4e-1200x284.jpg</key>
 							<dict>
@@ -5032,6 +5162,16 @@
 								<key>Size</key>
 								<integer>338288</integer>
 							</dict>
+							<key>files/stacks-image-5e1ff49-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								d/12RsCKoVv4
+								r9+0ESaqAg==
+								</data>
+								<key>Size</key>
+								<integer>78971</integer>
+							</dict>
 							<key>files/stacks-image-7e9dad3-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -5071,6 +5211,26 @@
 								</data>
 								<key>Size</key>
 								<integer>654306</integer>
+							</dict>
+							<key>files/stacks-image-bcdb310-250x260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								kIzXf5nC37dU
+								ED0RuUkYDQ==
+								</data>
+								<key>Size</key>
+								<integer>101485</integer>
+							</dict>
+							<key>files/stacks-image-bcdb310-250x260@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Y9RpQKxhcjiN
+								udjjwCufbQ==
+								</data>
+								<key>Size</key>
+								<integer>354232</integer>
 							</dict>
 							<key>files/stacks-image-cfb5234-98x98.jpg</key>
 							<dict>
@@ -5166,11 +5326,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								HMDlV1FXVB3V
-								SuGMYRNzKw==
+								OdRZSw33KooE
+								/MofE2Xl+Q==
 								</data>
 								<key>Size</key>
-								<integer>162172</integer>
+								<integer>184170</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -5186,11 +5346,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								fhd1Ls5jzA7j
-								PMgT1ujC1Q==
+								eAK6pfcZJi0n
+								ecvB3lnbGw==
 								</data>
 								<key>Size</key>
-								<integer>82718</integer>
+								<integer>98997</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5269,7 +5429,7 @@
 					<key>page51 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-13T15:36:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5328,11 +5488,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								3LCpINelDQyc
-								6GaBoUfLoA==
+								J2amkKK1ivkB
+								+fn8Z3zMUQ==
 								</data>
 								<key>Size</key>
-								<integer>143163</integer>
+								<integer>145066</integer>
 							</dict>
 							<key>files/stacks_page_page51.js</key>
 							<dict>
@@ -5348,11 +5508,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Z6+VsC0404u8
-								V429NbAoBw==
+								ocYFjjADXrDu
+								l74Y5Fcp7g==
 								</data>
 								<key>Size</key>
-								<integer>49649</integer>
+								<integer>50155</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6009,7 +6169,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-07T19:48:38Z</date>
+						<date>2018-05-13T15:36:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6058,11 +6218,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								kEUw5h3X9TQH
-								g4MdI1XUtQ==
+								tjk9Ns87ffFW
+								8y79EUTGMw==
 								</data>
 								<key>Size</key>
-								<integer>3254</integer>
+								<integer>3318</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6075,7 +6235,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-07T19:48:38Z</date>
+						<date>2018-05-13T15:36:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7114,11 +7274,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2VX3aLds6+70
-								5ImjcD2dTw==
+								iJsGfjlNlHFn
+								0Jeao3FahA==
 								</data>
 								<key>Size</key>
-								<integer>1979</integer>
+								<integer>2067</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
