--- a/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/4-Media/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/4-Media/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T15:18:20Z</date>
+						<date>2018-05-13T15:36:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -92,11 +92,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								3LCpINelDQyc
-								6GaBoUfLoA==
+								J2amkKK1ivkB
+								+fn8Z3zMUQ==
 								</data>
 								<key>Size</key>
-								<integer>143163</integer>
+								<integer>145066</integer>
 							</dict>
 							<key>files/stacks_page_page51.js</key>
 							<dict>
@@ -112,11 +112,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Z6+VsC0404u8
-								V429NbAoBw==
+								ocYFjjADXrDu
+								l74Y5Fcp7g==
 								</data>
 								<key>Size</key>
-								<integer>49649</integer>
+								<integer>50155</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
