--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T17:03:59Z</date>
+						<date>2018-05-13T15:34:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -67,6 +67,46 @@
 								</data>
 								<key>Size</key>
 								<integer>68548</integer>
+							</dict>
+							<key>files/stacks-image-10532b8-250x260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								U8fXe2mIAwWX
+								hw+GczBpSg==
+								</data>
+								<key>Size</key>
+								<integer>97116</integer>
+							</dict>
+							<key>files/stacks-image-10532b8-250x260@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								8WCcaPD7Laqf
+								FSKjvdKBnQ==
+								</data>
+								<key>Size</key>
+								<integer>319859</integer>
+							</dict>
+							<key>files/stacks-image-17fd2ba-250x260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								N0khg3CNZLPo
+								Gy4lYWwyhQ==
+								</data>
+								<key>Size</key>
+								<integer>87965</integer>
+							</dict>
+							<key>files/stacks-image-17fd2ba-250x260@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Os8gTdkxTsH7
+								wsVCDx+aDw==
+								</data>
+								<key>Size</key>
+								<integer>319397</integer>
 							</dict>
 							<key>files/stacks-image-1aebfb5-250x250.png</key>
 							<dict>
@@ -107,6 +147,16 @@
 								</data>
 								<key>Size</key>
 								<integer>222004</integer>
+							</dict>
+							<key>files/stacks-image-24a754b-250x254.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								vVeZyTy9ktpw
+								4c/asRc/Xg==
+								</data>
+								<key>Size</key>
+								<integer>87004</integer>
 							</dict>
 							<key>files/stacks-image-2d02c4e-1200x284.jpg</key>
 							<dict>
@@ -168,6 +218,16 @@
 								<key>Size</key>
 								<integer>338288</integer>
 							</dict>
+							<key>files/stacks-image-5e1ff49-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								d/12RsCKoVv4
+								r9+0ESaqAg==
+								</data>
+								<key>Size</key>
+								<integer>78971</integer>
+							</dict>
 							<key>files/stacks-image-7e9dad3-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -207,6 +267,26 @@
 								</data>
 								<key>Size</key>
 								<integer>654306</integer>
+							</dict>
+							<key>files/stacks-image-bcdb310-250x260.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								kIzXf5nC37dU
+								ED0RuUkYDQ==
+								</data>
+								<key>Size</key>
+								<integer>101485</integer>
+							</dict>
+							<key>files/stacks-image-bcdb310-250x260@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Y9RpQKxhcjiN
+								udjjwCufbQ==
+								</data>
+								<key>Size</key>
+								<integer>354232</integer>
 							</dict>
 							<key>files/stacks-image-cfb5234-98x98.jpg</key>
 							<dict>
@@ -302,11 +382,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								HMDlV1FXVB3V
-								SuGMYRNzKw==
+								OdRZSw33KooE
+								/MofE2Xl+Q==
 								</data>
 								<key>Size</key>
-								<integer>162172</integer>
+								<integer>184170</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -322,11 +402,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								fhd1Ls5jzA7j
-								PMgT1ujC1Q==
+								eAK6pfcZJi0n
+								ecvB3lnbGw==
 								</data>
 								<key>Size</key>
-								<integer>82718</integer>
+								<integer>98997</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
