--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-05-04T17:02:29Z</date>
+						<date>2018-05-13T15:34:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -88,6 +88,16 @@
 								<key>Size</key>
 								<integer>337058</integer>
 							</dict>
+							<key>files/stacks-image-24a754b-250x254.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								vVeZyTy9ktpw
+								4c/asRc/Xg==
+								</data>
+								<key>Size</key>
+								<integer>87004</integer>
+							</dict>
 							<key>files/stacks-image-48ee80b-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -128,6 +138,46 @@
 								<key>Size</key>
 								<integer>12547</integer>
 							</dict>
+							<key>files/stacks-image-bbb78b8-250x256.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								JGmq7bn3sZKr
+								l/PS9TxkQw==
+								</data>
+								<key>Size</key>
+								<integer>87862</integer>
+							</dict>
+							<key>files/stacks-image-bbb78b8-250x256@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								0bFXvBesPqoA
+								8kzqWu367w==
+								</data>
+								<key>Size</key>
+								<integer>319108</integer>
+							</dict>
+							<key>files/stacks-image-bcdb310-250x256.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								JQq/tMG5yWnX
+								mrXC2R4Oig==
+								</data>
+								<key>Size</key>
+								<integer>101345</integer>
+							</dict>
+							<key>files/stacks-image-bcdb310-250x256@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								BBFEAKWPfxhN
+								YCQVK2+Czg==
+								</data>
+								<key>Size</key>
+								<integer>353790</integer>
+							</dict>
 							<key>files/stacks-image-d36e992-250x322.png</key>
 							<dict>
 								<key>Digest</key>
@@ -137,6 +187,36 @@
 								</data>
 								<key>Size</key>
 								<integer>125068</integer>
+							</dict>
+							<key>files/stacks-image-eeb0773-250x256.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								GLa1SXJ3/KWi
+								242Hx1R27g==
+								</data>
+								<key>Size</key>
+								<integer>97076</integer>
+							</dict>
+							<key>files/stacks-image-eeb0773-250x256@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								E6u3Hrgo76W+
+								JMp5vekY4g==
+								</data>
+								<key>Size</key>
+								<integer>319747</integer>
+							</dict>
+							<key>files/stacks-image-f3385bb-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								d/12RsCKoVv4
+								r9+0ESaqAg==
+								</data>
+								<key>Size</key>
+								<integer>78971</integer>
 							</dict>
 							<key>files/stacks-image-f38d32b-800x688.png</key>
 							<dict>
@@ -172,11 +252,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Uk2sfBQvl2V8
-								Nn27RllAUg==
+								rxwf4nIxJ/Fd
+								2l7sRQKtGA==
 								</data>
 								<key>Size</key>
-								<integer>151440</integer>
+								<integer>164222</integer>
 							</dict>
 							<key>files/stacks_page_page36.js</key>
 							<dict>
@@ -192,11 +272,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								z8oJEGvuErDG
-								QUXKqRHDew==
+								1O02I/N++I93
+								RG3yMyrVbA==
 								</data>
 								<key>Size</key>
-								<integer>60380</integer>
+								<integer>69248</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
